--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "mongoose": "*",
     "express-session": "*",
     "req-flash": "*",
-    "wechat": "*",
-    "connect-mongo": "*"
+    "wechat": "*"
   }
 }
